# galry

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  docker-manifest.tmpl
.cargo/: config
src/: main.rs
templates/: album.html  album.js  base.html  err404.html  image.html  index.html  style.css
